create Calculator UI

--- a/src/App.css
+++ b/src/App.css
@@ -2,38 +2,34 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calc-container {
+  width: 50%;
+  margin: 15% auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(6, 1fr);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calc-display {
+  grid-column: 1 /span 4;
+  padding: 10% 5%;
+  border: solid 2px #c0c0c0;
+  text-align: right;
+  background: #bababa;
+  font-size: 1.4em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.buttons {
+  background: #e0e0e0;
+  padding: 20% 0;
+  border: solid 2px #c0c0c0;
+  font-size: 1.4em;
 }
 
-.App-link {
-  color: #61dafb;
+.zero-button {
+  grid-column: 1/ span 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.yellow {
+  background: #f5913e;
 }
