--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -1,13 +1,14 @@
 .calc-container {
-  width: 50%;
-  height: 50vh;
-  margin: 10% auto;
   display: grid;
+  height: 80%;
+  width: 90%;
+  margin: 0 auto;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(6, 1fr);
 }
 
 .calc-display {
+  height: 1.6em;
   grid-column: 1 /span 4;
   border: solid 2px #c0c0c0;
   padding: 3% 5%;
