add mobile page design

--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,19 @@
   color: #16a085;
 }
 
-.nav-items > * ,footer > p{
+.nav-items>*,
+footer>p {
   color: #16a085;
   font-weight: 700;
   text-decoration: none;
+}
+
+.nav-items {
+  padding: 5% 0;
+}
+
+.nav-items :hover {
+  color: #fff;
 }
 
 footer {
@@ -28,7 +37,7 @@ footer {
   background: #353535;
 }
 
-.profile-link{
+.profile-link {
   color: #fff;
 }
 
@@ -36,13 +45,14 @@ footer {
   width: 40%;
   list-style: none;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
 }
 
 @media screen and (min-width:768px) {
 
   .nav-list {
-    width: 40%;
+    flex-direction: row;
     list-style: none;
     display: flex;
     justify-content: space-around;
